# ChangeLog for net-p2p/ctcs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/ctcs/ChangeLog,v 1.1 2007/01/16 19:20:10 armin76 Exp $

*ctcs-1.2 (16 Jan 2007)

  16 Jan 2007; Raúl Porcel <armin76@gentoo.org> +metadata.xml,
  +ctcs-1.2.ebuild:
  New ebuild, bug 131914 by TGL <degrenier at easyconnect dot fr>
