@@ -1,12 +1,17 @@
 DIST ctcs-1.2.tar.gz 22561 RMD160 97e5c78e01bc811f2d24c3f3516d9de7c3ad3308 SHA1 adf5f39d9fe221536188f0fb295caf3cbb780dee SHA256 c4f62d4997333975dff0b1c9f4ab37be0d3fe110404034522e1416a9e842dc04
+DIST ctcs-1.3.tar.gz 24734 RMD160 387e517a4eb07985ebc10813f9b8669ab65224f3 SHA1 d85caeecfb13e19a62b1dc8409699c109ebb19bc SHA256 d64471d365ab44a3551b83b74711a1b1e5ceb34024128a2d1b73befbb3444a97
 EBUILD ctcs-1.2.ebuild 566 RMD160 e060ab698d667d161107b5c7304df53012e99883 SHA1 0b0e2cbe77bc5eceb2394eec0779bea07b045204 SHA256 e53c7e20616dab474336a60bc96e43c494d2b68416548038e6d4e9ed8bcbfb0c
 MD5 9e30eaa8d3f065b266d4294233ce3b42 ctcs-1.2.ebuild 566
 RMD160 e060ab698d667d161107b5c7304df53012e99883 ctcs-1.2.ebuild 566
 SHA256 e53c7e20616dab474336a60bc96e43c494d2b68416548038e6d4e9ed8bcbfb0c ctcs-1.2.ebuild 566
-MISC ChangeLog 374 RMD160 cdfb25b04bf0ee01fa294dc98df78586e0fdbc80 SHA1 4d4b4dbf602414f0c2419fadadca3fbcb9543b54 SHA256 16f7573a7cad60641c6b6347dfc185a77fd8bfe018b6fdad6530cf7d13073232
-MD5 30467487b588aee9e614f5eda227710c ChangeLog 374
-RMD160 cdfb25b04bf0ee01fa294dc98df78586e0fdbc80 ChangeLog 374
-SHA256 16f7573a7cad60641c6b6347dfc185a77fd8bfe018b6fdad6530cf7d13073232 ChangeLog 374
+EBUILD ctcs-1.3.ebuild 552 RMD160 3a8eb5f3a49b68c36f4b85fd70ebc3e5cb055a3c SHA1 0c9b84ed04c1c01bc41265b2f6076d831c6b01d6 SHA256 9f9a55f93325ba912335b03d4fea33017ee57803d25efdc5e51cef42066d7263
+MD5 b52fbdf1839b658b6e2deccc1c69302f ctcs-1.3.ebuild 552
+RMD160 3a8eb5f3a49b68c36f4b85fd70ebc3e5cb055a3c ctcs-1.3.ebuild 552
+SHA256 9f9a55f93325ba912335b03d4fea33017ee57803d25efdc5e51cef42066d7263 ctcs-1.3.ebuild 552
+MISC ChangeLog 480 RMD160 76f71153e301b861395ee708b7c2ab699a6ff967 SHA1 f62034a9dc784ece01c942e9b6225d2a87120dd7 SHA256 6a67caadc1c42e85a6b9fc527b9b1bbdc4d44134fcc83a10b746574fd6ec07e7
+MD5 c1abd6c2a37e15de5157aba711800229 ChangeLog 480
+RMD160 76f71153e301b861395ee708b7c2ab699a6ff967 ChangeLog 480
+SHA256 6a67caadc1c42e85a6b9fc527b9b1bbdc4d44134fcc83a10b746574fd6ec07e7 ChangeLog 480
 MISC metadata.xml 160 RMD160 828887200387b28c37fc97111fc6bc3a0a2fcccd SHA1 813ef5bc57f6a8d95e7cab7a745a2a824858f49c SHA256 fe06593409e7f28665c032001005e94cb650299711a0af7f1a558bdb56c4004f
 MD5 8aefbc0e49db723ca1ad02d0c409cd49 metadata.xml 160
 RMD160 828887200387b28c37fc97111fc6bc3a0a2fcccd metadata.xml 160
@@ -14,3 +19,6 @@ SHA256 fe06593409e7f28665c032001005e94cb650299711a0af7f1a558bdb56c4004f metadata
 MD5 461dcb51f4120f7f9b0858c6e88085a6 files/digest-ctcs-1.2 223
 RMD160 cbf1e5726a24cb0a3c5a8f22b5559fd23d48c814 files/digest-ctcs-1.2 223
 SHA256 6fd5781f97fd023824978616617338e6b85a202ffb69bd78c5745c1a40e3589b files/digest-ctcs-1.2 223
+MD5 95247e726eb0fa1326684f63ba4174bf files/digest-ctcs-1.3 223
+RMD160 bb7ad7c527a2281bc91c011629c73619b66a27a8 files/digest-ctcs-1.3 223
+SHA256 530de5590f533db8e2d59f554deea002b69a3f324b64a68a017e11b2ab459f9d files/digest-ctcs-1.3 223
