@@ -1,0 +1,3 @@
+MD5 120f414699f3171370ee116c0c4d4a90 ctcs-1.3.tar.gz 24734
+RMD160 387e517a4eb07985ebc10813f9b8669ab65224f3 ctcs-1.3.tar.gz 24734
+SHA256 d64471d365ab44a3551b83b74711a1b1e5ceb34024128a2d1b73befbb3444a97 ctcs-1.3.tar.gz 24734
